reading-list create fix and name overflow fix

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -86,6 +86,13 @@ body {
   }
 }
 
+.truncate {
+  width: 180px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 5;
